--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
   text-align: center;
-  background-color: #394867;
+  background-color:whitesmoke;
   font-family: 'Oswald', sans-serif;
 }
 h1{
@@ -21,7 +21,7 @@ h1{
   width:50%;
   height:auto;
   height:300px;
-  background-color: #9BA4B5;
+  background-color: skyblue;
   font-family: 'Montserrat', sans-serif;
 }
 .lb{
@@ -33,8 +33,8 @@ h1{
   margin-top: 40px;
   width:120px;
   margin-right:15px;
-  font-size: 20px;
-  background-color: rgba(0, 0, 0, 0.726);
+  background-color: black;
+  font-size: 20px; 
   color:white;
 }
 .sl{
